Changelog
=========

2.1.5 (unreleased)
------------------

- Nothing changed yet.


2.1.4 (2013-04-06)
------------------

- Default to position 0 if folder position is not assigned.
  [kroman0, pbauer]


2.1.3 (2013-03-05)
------------------

- Modify UIDMigrator so that it also works for items which
  provides IMutableUUID.
  [pabo]


2.1.2 (2012-12-21)
------------------

- When Joe is the Creator of an object and Jane is the Owner, make
  sure Joe stays the Creator after migrating.
  [maurits]


2.1.1 (2012-04-15)
------------------

- Migrate marker interfaces.
  Fixes http://dev.plone.org/ticket/11424
  [maurits]

- Migrate extension fields too (archetypes.schemaextender).
  [maurits]

- Use obj.__parent__ instead of obj getParentNode() for Zope trunk
  compatibility.
  [elro]

2.1.0 (2011-10-06)
------------------

- Add support for a `limit` option for the catalog based walkers, so it only
  tries to load up to `limit` items at a time, defaulting to no limit.
  [hannosch]

- Catch attribute errors during `brain.getObject` and log them instead of
  breaking the upgrade.
  [hannosch]

2.0.3 (2011-08-11)
------------------

- Undo patch correctly
  [jfroche]

2.0.2 (2011-08-10)
------------------

- Fix migration for folder containing an object (which is often the case) by patching the 'notifyWorkflowCreated' method on WorkflowAware class
  [jfroche]

- Fix for folderish items, also use ATItemMigratorMixin
  [jfroche]

- Add local buildout config
  [jfroche]

- Use module name, not the full file path, to register with the logging module.
  [mj]

2.0.1 - 2010-12-08
------------------

- Unlock locked objects prior to migrating them.
  [ggozad]

2.0 - 2010-07-18
----------------

- No changes.

2.0b1 - 2010-06-13
------------------

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Added support for archetypes.schemaextender >= 2.0 and disable the schema
  cache during migrations.
  [hannosch]

2.0a3 - 2009-11-15
------------------
