@@ -4,7 +4,8 @@ Changelog
 2.1.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Keep redirections from plone.app.redirect when migrating.
+  [maurits]
 
 
 2.1.4 (2013-04-06)
